2014-09-29 Added blocking on Check in Coloring module
2014-09-29 Fixed activity in Show Answers mode in Coloring, Connection and Image Identification modules.
2014-09-29 Fixed problem with libraries and date in IWB Toolbar module.
2014-09-29 Fixed problem with Play button in Slideshow module after changing slides
2014-09-29 Fixed placement of Next and Report buttons in Navigation Bar module
2014-09-26 Fixed restoring user selection after CheckAnswers event in ShowAnswers mode in Text Selection module
2014-09-26 Fixed handling Reset event while in ShowAnswers mode in Ordering module
2014-09-26 Fixed double lines on Android.4.1.2 in Connection module
2014-09-26 Fixed showing on Android 4.1.2 in Glossary module
2014-09-25 Fixed ShowAnswers in Text module for all type of gaps
2014-09-25 Added disable to Choice module when in ShowAnswers mode
2014-09-24 Added toolbar separator support in Paragraph module ( | - pipe)
2014-09-24 Removed cut, copy & paste buttons from toolbar in Paragraph module
2014-09-24 Added new toolbar features in Paragraph module: forecolor and backcolor
2014-09-24 Fixed hiding toolbar when toolbar buttons are in more than one line in Paragraph module
2014-09-24 Loading content fixes in Coloring module
2014-09-21 Added library for Edge Animation module
2014-09-23 Added close button to Page Rating module
2014-09-23 Fixed issue with Navigation Bar on iPad with iOS8
2014-09-22 Fixed issue with Animation on iPads
2014-09-22 Fixed Connection module: hiding images does not occur anymore
2014-09-19 Fixed show answers in Text module
2014-09-19 Added new module: Pie Chart
2014-09-19 [IWB Toolbar] Unified date in notes, now notes appears always below panel
2014-09-18 Fixed problem with width and height in Ordering module
2014-09-17 Changed libraries to minified versions
2014-09-17 Fixed problem with doubled properties in Editor
2014-09-17 Fixed problem with loading progress circle in Editor