@@ -1,3 +1,4 @@
+2014-09-30 Fixed blocked gaps issue in response to ShowAnswers event in Text module
 2014-09-29 Added blocking on Check in Coloring module
 2014-09-29 Fixed activity in Show Answers mode in Coloring, Connection and Image Identification modules.
 2014-09-29 Fixed problem with libraries and date in IWB Toolbar module.
